--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "base": "^3.0.0",
+    "native": "^0.3.3",
+    "native-base": "^2.13.5",
     "react": "16.8.6",
-    "react-native": "0.60.5"
+    "react-native": "0.60.5",
+    "react-native-gesture-handler": "^1.4.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-material-design": "^0.3.7",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
